--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,20 +27,21 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: #^1.0.2
-  http: #^1.1.0
-  provider: #^6.0.3
-#  dartz: #^0.10.0-nullsafety.2
-#  equatable: #^2.0.2
-#  google_fonts: #^6.2.1
-#  flutter_rating_bar: #^4.0.0
-#  cached_network_image: #^3.0.0
-  get_it: #^7.1.3
-#  sqflite: #^2.0.0+3
-#  path_provider: #^2.0.2
+  cupertino_icons:
+  cached_network_image:
+  dartz:
+  equatable:
   flutter_bloc:
+  flutter_rating_bar:
   firebase_core:
   firebase_crashlytics:
+  get_it:
+  google_fonts:
+  http:
+  path_provider:
+  provider:
+  rxdart:
+  sqflite:
   core:
     path: core
   about:
@@ -55,11 +56,13 @@ dependencies:
     path: watchlist
 
 dev_dependencies:
-  mockito: #^5.0.8
-  build_runner: #^2.0.4
   flutter_test:
     sdk: flutter
-  flutter_lints: #^3.0.2
+  flutter_lints:
+  bloc_test:
+  build_runner:
+  mockito:
+  mocktail:
 
 #  include: package:flutter_lints/flutter.yaml
 
